--- a/src/grupo3/reto2/view/Placehelp.html
+++ b/src/grupo3/reto2/view/Placehelp.html
@@ -46,46 +46,46 @@ and open the template in the editor.
         <h1 align="Center">LUGAR</h1>
         <hr>
         <div class="cuerpo">
-            <center><p class="destaca">Fig 1: Ventana Lugar</p><img src ="images/VentanaLugar.png" alt= "ventana"></center>
+            <center><p class="destaca">Fig 1: Ventana Lugar</p><img src ="images/VentanaLugar.PNG" alt= "ventana"></center>
             <p>Esto saldrá al abrir la ventana, una vez se ejecuta.</p>
             <br>
-            <center><p class="destaca">Fig 2: Creacion</p><img src ="images/VentanaLugar2.png" alt= "ventana2"></center>
+            <center><p class="destaca">Fig 2: Creacion</p><img src ="images/VentanaLugar2.PNG" alt= "ventana2"></center>
             <br>
             <p>Al rellenamos los 4 campos previamente vacios .</p>
-            <center><p class="destaca">Fig 3: Creando un Lugar</p><img src ="images/VentanaLugar3.png" alt= "ventana3"></center>
+            <center><p class="destaca">Fig 3: Creando un Lugar</p><img src ="images/VentanaLugar3.PNG" alt= "ventana3"></center>
             <br>
             <p>y pulsar el boton de crear nos saldra el siguiente mensaje.</p>
             <br>
-            <center><p class="destaca">Fig 4: empezamos a modificar </p><img src ="images/VentanaLugar4.png" alt= "ventana4"></center>
+            <center><p class="destaca">Fig 4: empezamos a modificar </p><img src ="images/VentanaLugar4.PNG" alt= "ventana4"></center>
             <p>Al escoger un elemento de la tabla los datos característicos de esta se marcarán en su campo correspondiente, permitiendo el borrado
                 y la modificación de estos.</p>
             <br>
             
-            <center><p class="destaca">Fig 6.1: Confirmación de borrado </p><img src ="images/VentanaLugar6.png" alt= "ventana6"></center> 
-            <center><p class="destaca">Fig 6.2: Borrado </p><img src ="images/VentanaLugar7.png" alt= "ventana7"></center>
+            <center><p class="destaca">Fig 6.1: Confirmación de borrado </p><img src ="images/VentanaLugar6.PNG" alt= "ventana6"></center> 
+            <center><p class="destaca">Fig 6.2: Borrado </p><img src ="images/VentanaLugar7.PNG" alt= "ventana7"></center>
              <p>Al pulsar borrado saldrá una ventana pidientote si en verdad quieres borrar el lugar selecionado o no, si pulsas sí comprobará los datos y
                 en caso de ser incorrectos saldrá un error y podrás volver a intentarlo otra vez.
                 Si los datos son correctos el mensaje se borrará como se muestra aquí:</p>
             <br>
-            <center><p class="destaca">Fig 8: Filtrados </p><img src ="images/VentanaLugar9.png" alt= "ventana11"></center>
+            <center><p class="destaca">Fig 8: Filtrados </p><img src ="images/VentanaLugar9.PNG" alt= "ventana11"></center>
             <p>Esta ventana tiene 2 posibles opciones de filtrado para tipo de lugar: privado y publico</p>
-            <center><p class="destaca">Fig 9: Filtrado por privado </p><img src ="images/VentanaLugar10.png" alt= "ventana12"></center>
+            <center><p class="destaca">Fig 9: Filtrado por privado </p><img src ="images/VentanaLugar10.PNG" alt= "ventana12"></center>
             <p>Si buscamos uno de los valores por parametro de la tabla nos saldrá el lugar, si no sale nos devolverá la tabla vacia, indicando que no
                 hay valores por parametro indicado. Para volver a ver todos los objetivos debemos de escoger la opción ninguna.</p>
             <br>
-            <center><p class="destaca">Fig 9: Filtrado por publico </p><img src ="images/VentanaLugar11.png" alt= "ventana12"></center>
+            <center><p class="destaca">Fig 9: Filtrado por publico </p><img src ="images/VentanaLugar11.PNG" alt= "ventana12"></center>
             <p>Si buscamos uno de los valores por parametro de la tabla nos saldrá el lugar, si no sale nos devolverá la tabla vacia, indicando que no
                 hay valores por parametro indicado. Para volver a ver todos los objetivos debemos de escoger la opción ninguna.</p>
             <br>
-            <center><p class="destaca">Fig 11: Informe </p><img src ="images/VentanaLugar12.png" alt= "ventana14"></center>
+            <center><p class="destaca">Fig 11: Informe </p><img src ="images/VentanaLugar12.PNG" alt= "ventana14"></center>
             <p>Si pulsamos el botón de informe de la ventana de objetivo saldrá una ventana emergente con un informe de jasperreprots, mostrando la info de la tabla de lugares
                 detalladamente, aqui puedes imprimirla etc...</p>
             <br>
-            <center><p class="destaca">Fig 11: Ayuda </p><img src ="images/VentanaLugar13.png" alt= "ventana14"></center>
+            <center><p class="destaca">Fig 11: Ayuda </p><img src ="images/VentanaLugar13.PNG" alt= "ventana14"></center>
             <p>Si pulsamos el botón de informe de la ventana de ayuda saldrá una ventana emergente con el documento en el que estamos ahora mismo que explica toda esta ventana</p>
             <br>
             
-            <center><p class="destaca">Fig 12: Navegación Menubar</p><img src ="images/VentanaLugar14.png" alt= "ventana15"></center>
+            <center><p class="destaca">Fig 12: Navegación Menubar</p><img src ="images/VentanaLugar14.PNG" alt= "ventana15"></center>
             <p>Arriba a la izquierda tenemos un menubar para navegar entre distintas ventanas, con varias opciones: </p>
             <ul type ="number">
                 <li>Home:<br>
