--- a/src/grupo3/reto2/view/Objetivohelp.html
+++ b/src/grupo3/reto2/view/Objetivohelp.html
@@ -46,55 +46,55 @@ and open the template in the editor.
         <h1 align="Center">OBJETIVOS</h1>
         <hr>
         <div class="cuerpo">
-            <center><p class="destaca">Fig 1: Ventana Objetivo</p><img src ="images/VentanaObjetivo.png" alt= "ventana"></center>
+            <center><p class="destaca">Fig 1: Ventana Objetivo</p><img src ="images/VentanaObjetivo.PNG" alt= "ventana"></center>
             <p>Esto saldrá al abrir la ventana, una vez se ejecuta. Notese que los botones de Crear, Modificar y Borrar están eliminados.</p>
             <br>
-            <center><p class="destaca">Fig 2: Activación de botones</p><img src ="images/VentanaObjetivo2.png" alt= "ventana2"></center>
+            <center><p class="destaca">Fig 2: Activación de botones</p><img src ="images/VentanaObjetivo2.PNG" alt= "ventana2"></center>
             <br>
             <p>Al rellenar los 3 campos previamente vacios, los botones se activarán, permitiendo así la funcionalidad de la ventana.</p>
-            <center><p class="destaca">Fig 3: Creando un objetivo</p><img src ="images/VentanaObjetivo3.png" alt= "ventana3"></center>
+            <center><p class="destaca">Fig 3: Creando un objetivo</p><img src ="images/VentanaObjetivo3.PNG" alt= "ventana3"></center>
             <br>
             <p>Si los campos han sido valorados de forma correcta (caso contrario saldrá una ventana indicando del error) el objetivo que usted
                 ha introducido saldrá en la tabla de forma correspondiendte<br> (La clave de admin saldrá si se ha inciado sesión como admin).</p>
             <br>
-            <center><p class="destaca">Fig 4: Rellenar los datos seleccionando un elemento </p><img src ="images/VentanaObjetivo4.png" alt= "ventana4"></center>
+            <center><p class="destaca">Fig 4: Rellenar los datos seleccionando un elemento </p><img src ="images/VentanaObjetivo4.PNG" alt= "ventana4"></center>
             <p>Al escoger un elemento de la tabla los datos característicos de esta se marcarán en su campo correspondiente, permitiendo el borrado
             y la modificación de estos.</p>
             <br>
-            <center><p class="destaca">Fig 5: Ejemplo de Modificiación </p><img src ="images/VentanaObjetivo5.png" alt= "ventana5"></center>
+            <center><p class="destaca">Fig 5: Ejemplo de Modificiación </p><img src ="images/VentanaObjetivo5.PNG" alt= "ventana5"></center>
             <p>Una vez que hayamos elegido una de las filas y los datos estén en ellas podemos modifcar o borrar. En el caso de modificar seleciona el
                 campo que deseas cambiar y pulsa el botón de modificar si los datos están bien el dato aparecerá modifcado, caso contrario saldrá un error
                 y podrás volver a intentarlo otra vez.</p>
             <br>
-            <center><p class="destaca">Fig 6.1: Confirmación de borrado </p><img src ="images/VentanaObjetivo6.png" alt= "ventana6"></center>
+            <center><p class="destaca">Fig 6.1: Confirmación de borrado </p><img src ="images/VentanaObjetivo6.PNG" alt= "ventana6"></center>
             <p>Al pulsar borrado saldrá una ventana pidientote si en verdad quieres borrar el obejtivo selecionado o no, si pulsas sí comprobará los datos y
             en caso de ser incorrectos saldrá un error y podrás volver a intentarlo otra vez.
             Si los datos son correctos el mensaje se borrará como se muestra aquí:</p> 
-            <center><p class="destaca">Fig 6.2: Borrado </p><img src ="images/VentanaObjetivo.png" alt= "ventana7"></center>
+            <center><p class="destaca">Fig 6.2: Borrado </p><img src ="images/VentanaObjetivo.PNG" alt= "ventana7"></center>
             <br>
-            <center><p class="destaca">Fig 7: Modificado </p><img src ="images/VentanaObjetivo.png" alt= "ventana8"></center>
+            <center><p class="destaca">Fig 7: Modificado </p><img src ="images/VentanaObjetivo.PNG" alt= "ventana8"></center>
             <p>Modificar tiene un procedimiento similar a borrado, para modificar debemos de elegir el objetivo que queremos modificar, una vez elegido 
             en los parametros de arriba debemos de cambiar el elemento del obejtivo a cambiar, al pulsar modificar si los datos están validados la ventana mostrará
             el obejtivo con el objetivo modificado, en caso contrario saldrá un error y podrás intentarlo otra vez.</p>
-            <center><p class="destaca">Fig 7.1: Fíjate en los datos bien </p><img src ="images/VentanaObjetivo.png" alt= "ventana9"></center>
-            <center><p class="destaca">Fig 7.2: Modificado hecho</p><img src ="images/VentanaObjetivo7.png" alt= "ventana10"></center>
+            <center><p class="destaca">Fig 7.1: Fíjate en los datos bien </p><img src ="images/VentanaObjetivo.PNG" alt= "ventana9"></center>
+            <center><p class="destaca">Fig 7.2: Modificado hecho</p><img src ="images/VentanaObjetivo7.PNG" alt= "ventana10"></center>
             <br>
-            <center><p class="destaca">Fig 8: Filtrados </p><img src ="images/VentanaObjetivo8.png" alt= "ventana11"></center>
+            <center><p class="destaca">Fig 8: Filtrados </p><img src ="images/VentanaObjetivo8.PNG" alt= "ventana11"></center>
             <p>Esta ventana tiene 3 posibles opciones de filtrado: Por valor de parametro, por id de obejtivo y mostrar todos los objetivos, vamos a enfocarnos en
             el de por valor de parametro:</p>
-            <center><p class="destaca">Fig 9: Filtrado por parametro </p><img src ="images/VentanaObjetivo9.png" alt= "ventana12"></center>
+            <center><p class="destaca">Fig 9: Filtrado por parametro </p><img src ="images/VentanaObjetivo9.PNG" alt= "ventana12"></center>
             <p>Si buscamos uno de los valores por parametro de la tabla nos saldrá el objetivo, si no sale nos devolverá la tabla vacia, indicando que no
             hay valores por parametro indicado. Para volver a ver todos los objetivos debemos de escoger la opción todos los objetivos.</p>
             <br>
-            <center><p class="destaca">Fig 10: Filtrado por clave de objetivo </p><img src ="images/VentanaObjetivo10.png" alt= "ventana13"></center>
+            <center><p class="destaca">Fig 10: Filtrado por clave de objetivo </p><img src ="images/VentanaObjetivo10.PNG" alt= "ventana13"></center>
             <p>Si buscamos uno de los valores por clave de la tabla nos saldrá el objetivo, si no sale nos devolverá la tabla vacia, indicando que no
             hay valores por clave indicada. Para volver a ver todos los objetivos debemos de escoger la opción todos los objetivos</p>
             <br>
-            <center><p class="destaca">Fig 11: Informe </p><img src ="images/VentanaObjetivo11.png" alt= "ventana14"></center>
+            <center><p class="destaca">Fig 11: Informe </p><img src ="images/VentanaObjetivo11.PNG" alt= "ventana14"></center>
             <p>Si pulsamos el botón de informe de la ventana de objetivo saldrá una ventana emergente con un informe de jasperreprots, mostrando la info de la tabla de objetivos
             detalladamente, aqui puedes imprimirla etc...</p>
             <br>
-            <center><p class="destaca">Fig 12: Navegación Menubar</p><img src ="images/VentanaObjetivo.png" alt= "ventana15"></center>
+            <center><p class="destaca">Fig 12: Navegación Menubar</p><img src ="images/VentanaObjetivo.PNG" alt= "ventana15"></center>
             <p>Arriba a la izquierda tenemos un menubar para navegar entre distintas ventanas, con varias opciones: </p>
             <ul type ="number">
                <li>Home:<br>
