Ventana de ayuda de ale añadida, falta implementar excepciones y los test

--- a/src/grupo3/reto2/view/Ventana_Evento.fxml
+++ b/src/grupo3/reto2/view/Ventana_Evento.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="TableEvent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="grupo3.reto2.controller.EventController">
+<Pane fx:id="TableEvent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="grupo3.reto2.controller.EventController">
    <children>
       <fx:include fx:id="hbox" source="MenuBar.fxml" />
       <Button fx:id="btnCrear" layoutX="785.0" layoutY="71.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="133.0" text="CREAR EVENTO " />
@@ -50,5 +50,6 @@
       <Button fx:id="btnInforme" layoutX="851.0" layoutY="521.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="INFORME" />
       <TextField fx:id="tfFiltro" layoutX="719.0" layoutY="378.0" prefHeight="21.0" prefWidth="150.0" />
       <Button fx:id="btnBorrar" layoutX="780.0" layoutY="141.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="142.0" text="BORRAR EVENTO" />
+      <Button fx:id="btnayuda" layoutX="851.0" layoutY="467.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="135.0" text="AYUDA" />
    </children>
 </Pane>
